--- a/package.json
+++ b/package.json
@@ -13,11 +13,21 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/lodash": "^4.17.1",
+		"autoprefixer": "^10.4.19",
+		"postcss": "^8.4.38",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"tailwindcss": "^3.4.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"axios": "^1.6.8",
+		"axios-cache-interceptor": "^1.5.2",
+		"lodash": "^4.17.21",
+		"pokenode-ts": "^1.20.0"
+	}
 }
